overflow fixed

--- a/src/components/projects/projectSection/styles.module.scss
+++ b/src/components/projects/projectSection/styles.module.scss
@@ -3,6 +3,7 @@
 .conteiner {
     position: relative;
     height: 100%;
+    overflow: hidden;
 }
 .projectConteiner {
     display: grid;
